openstack/pike/assets/eviz-etc/sysconfig/iptables-29sept2017
# Generated by iptables-save v1.4.21 on Fri Sep 29 15:04:19 2017
*nat
:PREROUTING ACCEPT [15348:972916]
:INPUT ACCEPT [6909:413956]
:OUTPUT ACCEPT [359307:21851472]
:POSTROUTING ACCEPT [14016:1133763]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o ovsbr0 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o ovsbr1 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 -d 172.17.0.0/16 -p tcp -m tcp -m multiport --dports 22,80,443,5000,9000,9022,9080,9090,9443 -j MASQUERADE
-A DOCKER -i ovsbr0 -j RETURN
-A DOCKER -i ovsbr1 -j RETURN
-A DOCKER ! -i ovsbr0 -p tcp -m tcp --dport 5000 -j DNAT --to-destination 172.17.0.5:5000
-A DOCKER ! -i ovsbr0 -p tcp -m tcp --dport 9000 -j DNAT --to-destination 172.17.0.9:9000
-A DOCKER ! -i ovsbr0 -p tcp -m tcp --dport 9022 -j DNAT --to-destination 172.17.0.80:22
-A DOCKER ! -i ovsbr0 -p tcp -m tcp --dport 9080 -j DNAT --to-destination 172.17.0.80:80
-A DOCKER ! -i ovsbr0 -p tcp -m tcp --dport 9443 -j DNAT --to-destination 172.17.0.80:443
-A DOCKER ! -i ovsbr1 -p tcp -m tcp --dport 5000 -j DNAT --to-destination 172.17.0.5:5000
-A DOCKER ! -i ovsbr1 -p tcp -m tcp --dport 9000 -j DNAT --to-destination 172.17.0.9:9000
-A DOCKER ! -i ovsbr1 -p tcp -m tcp --dport 9022 -j DNAT --to-destination 172.17.0.80:22
-A DOCKER ! -i ovsbr1 -p tcp -m tcp --dport 9080 -j DNAT --to-destination 172.17.0.80:80
-A DOCKER ! -i ovsbr1 -p tcp -m tcp --dport 9443 -j DNAT --to-destination 172.17.0.80:443
COMMIT
# Completed on Fri Sep 29 15:04:19 2017
# Generated by iptables-save v1.4.21 on Fri Sep 29 15:04:19 2017
*mangle
:PREROUTING ACCEPT [1200717:1382560523]
:INPUT ACCEPT [1121448:1139606131]
:FORWARD ACCEPT [79269:242954392]
:OUTPUT ACCEPT [1478301:186055082]
:POSTROUTING ACCEPT [1557570:429009474]
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Fri Sep 29 15:04:19 2017
# Generated by iptables-save v1.4.21 on Fri Sep 29 15:04:19 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1478301:186055082]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
-A INPUT -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A INPUT -p tcp -m tcp --dport 80 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5000 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8888 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A FORWARD -d 192.168.122.0/24 -o virbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.122.0/24 -i virbr0 -j ACCEPT
-A FORWARD -i virbr0 -o virbr0 -j ACCEPT
-A FORWARD -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o ovsbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o ovsbr1 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o ovsbr0 -j DOCKER
-A FORWARD -o ovsbr1 -j DOCKER
-A FORWARD -i ovsbr0 ! -o ovsbr0 -j ACCEPT
-A FORWARD -i ovsbr1 ! -o ovsbr1 -j ACCEPT
-A FORWARD -i ovsbr0 -o ovsbr0 -j ACCEPT
-A FORWARD -i ovsbr1 -o ovsbr1 -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -o virbr0 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 80 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 5000 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 8888 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A DOCKER -d 172.17.0.0/16 ! -i ovsbr0 -o ovsbr0 -p tcp -m tcp -m multiport --dports 22,80,443,5000,9000,9022,9080,9090,9443 -j ACCEPT
-A DOCKER -d 172.17.0.0/16 ! -i ovsbr1 -o ovsbr1 -p tcp -m tcp -m multiport --dports 22,80,443,5000,9000,9022,9080,9090,9443 -j ACCEPT
-A DOCKER-ISOLATION -j RETURN
COMMIT
# Completed on Fri Sep 29 15:04:19 2017
