openstack/pike/assets/eviz-etc/sysconfig/iptables-nat
# Generated by iptables-save v1.4.21 on Fri Sep 29 15:49:36 2017
*nat
:PREROUTING ACCEPT [6:372]
:INPUT ACCEPT [3:180]
:OUTPUT ACCEPT [4:295]
:POSTROUTING ACCEPT [4:295]
-A POSTROUTING -o ovsbr0 -j MASQUERADE
-A POSTROUTING -o ovsbr1 -j MASQUERADE
COMMIT
# Completed on Fri Sep 29 15:49:36 2017
# Generated by iptables-save v1.4.21 on Fri Sep 29 15:49:36 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [142:15882]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp -m multiport --dports 22,80,90,443,5000,8080,8443,8888,9999 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -j ACCEPT
COMMIT
# Completed on Fri Sep 29 15:49:36 2017
