openstack/pike/assets/eviz-etc/sysconfig/iptables-nat-eth0
# Generated by iptables-save v1.4.21 on Fri Sep 29 16:12:31 2017
*nat
:PREROUTING ACCEPT [62:3852]
:INPUT ACCEPT [24:1444]
:OUTPUT ACCEPT [65:4431]
:POSTROUTING ACCEPT [65:4431]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Fri Sep 29 16:12:31 2017
# Generated by iptables-save v1.4.21 on Fri Sep 29 16:12:31 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1733:196508]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp -m multiport --dports 22,80,90,443,5000,8080,8443,8888,9999 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -j ACCEPT
COMMIT
# Completed on Fri Sep 29 16:12:31 2017
