openstack/pike/assets/eviz-etc/sysconfig/iptables-ovsbr-virbr
# Generated by iptables-save v1.4.21 on Mon Oct  2 15:25:23 2017
*mangle
:PREROUTING ACCEPT [3409:273872]
:INPUT ACCEPT [3169:254155]
:FORWARD ACCEPT [240:19717]
:OUTPUT ACCEPT [2640:403893]
:POSTROUTING ACCEPT [2838:419148]
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Mon Oct  2 15:25:23 2017
# Generated by iptables-save v1.4.21 on Mon Oct  2 15:25:23 2017
*nat
:PREROUTING ACCEPT [125:8645]
:INPUT ACCEPT [67:4193]
:OUTPUT ACCEPT [49:3522]
:POSTROUTING ACCEPT [49:3522]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o ovsbr0 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 -d 172.17.0.0/16 -p tcp -m tcp -m multiport --dports 22,80,443,5000,9000,9022,9080,9090,9443 -j MASQUERADE
-A DOCKER -i ovsbr0 -j RETURN
-A DOCKER ! -i ovsbr0 -p tcp -m tcp --dport 5000 -j DNAT --to-destination 172.17.0.5:5000
-A DOCKER ! -i ovsbr0 -p tcp -m tcp --dport 9000 -j DNAT --to-destination 172.17.0.9:9000
-A DOCKER ! -i ovsbr0 -p tcp -m tcp --dport 9022 -j DNAT --to-destination 172.17.0.80:22
-A DOCKER ! -i ovsbr0 -p tcp -m tcp --dport 9080 -j DNAT --to-destination 172.17.0.80:80
-A DOCKER ! -i ovsbr0 -p tcp -m tcp --dport 9443 -j DNAT --to-destination 172.17.0.80:443
COMMIT
# Completed on Mon Oct  2 15:25:23 2017
# Generated by iptables-save v1.4.21 on Mon Oct  2 15:25:23 2017
*filter
:INPUT ACCEPT [3169:254155]
:FORWARD ACCEPT [240:19717]
:OUTPUT ACCEPT [2598:399431]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
-A INPUT -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A FORWARD -d 192.168.122.0/24 -o virbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.122.0/24 -i virbr0 -j ACCEPT
-A FORWARD -i virbr0 -o virbr0 -j ACCEPT
-A FORWARD -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -o virbr0 -p udp -m udp --dport 68 -j ACCEPT
COMMIT
# Completed on Mon Oct  2 15:25:23 2017
