openstack/pike/assets/eviz-etc/sysconfig/iptables-virbr0-ovsbr1
# Generated by iptables-save v1.4.21 on Mon Oct  2 15:55:21 2017
*nat
:PREROUTING ACCEPT [15:1060]
:INPUT ACCEPT [1:40]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -s 172.16.0.0/12 -d 224.0.0.0/24 -j RETURN
-A POSTROUTING -s 172.16.0.0/12 -d 255.255.255.255/32 -j RETURN
-A POSTROUTING -s 172.16.0.0/12 ! -d 172.16.0.0/12 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 172.16.0.0/12 ! -d 172.16.0.0/12 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 172.16.0.0/12 ! -d 172.16.0.0/12 -j MASQUERADE
COMMIT
# Completed on Mon Oct  2 15:55:21 2017
# Generated by iptables-save v1.4.21 on Mon Oct  2 15:55:21 2017
*mangle
:PREROUTING ACCEPT [314:22387]
:INPUT ACCEPT [262:17560]
:FORWARD ACCEPT [52:4827]
:OUTPUT ACCEPT [135:13380]
:POSTROUTING ACCEPT [187:18207]
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Mon Oct  2 15:55:21 2017
# Generated by iptables-save v1.4.21 on Mon Oct  2 15:55:21 2017
*filter
:INPUT ACCEPT [262:17560]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [135:13380]
-A INPUT -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A FORWARD -d 172.16.0.0/12 -o ovsbr1 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 172.16.0.0/12 -i ovsbr1 -j ACCEPT
-A FORWARD -i ovsbr1 -o ovsbr1 -j ACCEPT
-A FORWARD -o ovsbr1 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i ovsbr1 -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Mon Oct  2 15:55:21 2017
